# ogurec2-work

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt
cmd/: main.py
ogurec/: bot.py  chatgpt.py  steam.py  tenor.py  utils.py
ogurec/cmd/: main.py
ogurec/cogs/: conversation_cog.py  help_cog.py  presence_game_cog.py  utils_cog.py
ogurec/cogs/rebrand/: rebrand_cog.py  rebrand_users.py
ogurec/config/: settings.py
src/: bot.py  chatgpt.py  tenor.py
src/cogs/: base.py  help_cog.py  presence_game_cog.py  random_message_cog.py  uno_cog.py  utils_cog.py
src/cogs/fun/: banwords.py  eight_ball.py  fun_cog.py  game_reviews.py  game_stats.json  games_list.py
src/cogs/fun/pyrogram/: pyro_bot.py
src/cogs/rebrand/: rebrand_cog.py  rebrand_users.py
src/config/: settings.py
src/google_docs/: google_docs.py
src/tenor/: tenor.py
src/utils/: emoji_utils.py  mention_utils.py  role_utils.py
